2007-07-13 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-new-chatroom-dialog.c:
	* libempathy-gtk/empathy-new-chatroom-dialog.glade: Remove unused
	nickname entry and use a GtkTable for room information. More work is
	needed here.

	* libempathy-gtk/empathy-contact-widget.glade: Change padding to 6.

	* libempathy-gtk/empathy-contact-dialogs.c: Set a window title.

	* libempathy-gtk/empathy-contact-widget.c: Fix alignment of widgets.

	* libempathy/empathy-tp-contact-list.c: Add more debug msg for avatar
	handling.

2007-07-12 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/Makefile.am: Fix missing header for
	EmpathyAccountWidgetMSN.

	* configure.ac: Fix useless "\".

	* autogen.sh: run gtkdocize if needed.

2007-07-12 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac:
	* doc/*:
	* Makefile.am: Adding initial API documentation using gtk-doc.

2007-07-12 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Auto-accept to publish presence
	to contacts that are in our subscribe list. When accepting a pending
	contact add it to publish and subscribe list.

2007-07-09 Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy.c:
	* libempathy/empathy-debug.c:
	* libempathy/empathy-debug.h: Add EMPATHY_LOGFILE env variable. Fixes
	bug #455240 (Guillaume Desmottes).

2007-07-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-msn.glade:
	* libempathy-gtk/empathy-account-widget-msn.c:
	* libempathy-gtk/empathy-account-widget-msn.h:
	* libempathy-gtk/empathy-accounts-dialog.c:
	* libempathy-gtk/Makefile.am: Add MSN setting UI. Fixes bug #443162
	(Cosimo Cecchi).

	* libempathy-gtk/empathy-chat-view.c:
	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-log-manager.h: Add needed API to show chat logs in
	Tracker. Fixes bug #452536.

2007-07-07 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c: Workaround to fix a 